# foodie

./: .gitignore  CLAUDE.md  foodie_server.py  pyproject.toml  temp_map.html
docs/: index.html  japanese-restaurants-johns-creek__20250925_134247.html  korean-restaurants-johns-creek__2025-09-25 13:27:29.html  test_local_run.html  test_multiple_map__2025-09-25 13:32:41.html
foodie/agents/: foodie_agent.py  map_agent.py
foodie/agents/test/: test_map_agent.py
foodie/tools/: map_tool.py  rec_tool.py
foodie/tools/test/: test_map_tool.py  test_netlify_tool.py
foodie/util/: credentials.json  gdrive.py  github_util.py  surge_util.py
foodie/util/test/: test_gdrive.py  test_github_util.py  test_surge_util.py
