[project]
name = "foodie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "folium>=0.20.0",
    "mcp[cli]>=1.13.1",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "strands-agents>=1.7.1",
    "strands-agents-tools>=0.2.6",
]
