[project]
name = "foodie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.3",
    "folium>=0.20.0",
    "google-api-python-client>=2.182.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "strands-agents>=1.7.1",
    "strands-agents-tools>=0.2.6",
]
